# fourier_nmr_driver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
examples/batch_acquisition/: acquire_nmr.py  samples.json  samples.toml  settings.toml
src/fourier_nmr_driver/: __init__.py  __main__.py  acquisition.py  constants.py  driver.py
src/fourier_nmr_driver/constants/: constants.py
src/fourier_nmr_driver/driver/: driver.py
