[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "fourier_nmr_driver"
description = "Driver for Bruker Fourier80 with PAL instrument control."
version = "0.5.0"
requires-python = ">=3.11"
authors = [
    { name = "Filip T. Szczypiński", email = "fiszczyp@gmail.com" },
]
dependencies = [
    "ts-remote-api",
    "bruker-nmr-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

    [project.optional-dependencies]
    dev = [
        "pre-commit",
        "black",
        "docformatter",
        "interrogate",
        "isort",
        "pycodestyle",
        "pydocstyle",
        "pytest",
        "pytest-cov",
        "flake8",
    ]

    [project.scripts]
    batch_nmr = "fourier_nmr_driver.__main__:main"

[tool.setuptools.package-data]
"*" = ["py.typed", "*.toml"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.interrogate]
exclude = [
    "setup.py",
]
verbose = 2
ignore-init-method = true
ignore-init-module = true
ignore-setters = true
ignore-property-decorators = true
ignore-magic = true

[[tool.mypy.overrides]]
module = [
    'bruker.api.topspin',
    'bruker.model.nmr_model',
]
ignore_missing_imports = true


[tool.isort]
profile         = "black"
force_grid_wrap = 2
