[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "fourier_nmr_driver"
description = "Driver for Bruker Fourier80 with PAL instrument control."
version = "1.1.1"
requires-python = ">=3.11"
authors = [
    { name = "Filip T. Szczypiński", email = "fiszczyp@gmail.com" },
]
dependencies = [
    "adjustText",     # from TopSpin
    "jupyterlab",     # from TopSpin
    "jupyter",        # from TopSpin
    "pandas",         # from TopSpin
    "matplotlib",     # from TopSpin
    "numpy",          # from TopSpin
    "ts-remote-api",
    "bruker-nmr-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]

    [project.optional-dependencies]
    dev = [
        "pre-commit",
        "black",
        "docformatter",
        "interrogate",
        "isort",
        "pycodestyle",
        "pydocstyle",
        "pytest",
        "pytest-cov",
        "flake8",
    ]

    [project.scripts]
    batch_nmr = "fourier_nmr_driver.__main__:main"

[tool.setuptools.package-data]
"*" = ["py.typed", "*.toml"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.interrogate]
exclude = [
    "setup.py",
]
verbose = 2
ignore-setters = true
ignore-property-decorators = true
ignore-magic = true

[[tool.mypy.overrides]]
disable_error_code = "import-untyped"

[tool.ruff]
line-length = 79
target-version = "py311"
lint.select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TD",  # flake8-todos
    "PTH", # flake8-use-pathlib
    "ANN", # flake8-annotations
    "I",   # isort
    "N",   # PEP8 naming
    "D",   # pydocstyle
]
lint.ignore = [
    "ANN101",
    "ANN102",
    "ANN204",
    "D105",
]

    [tool.ruff.lint.pydocstyle]
    convention = "numpy"
